parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROCEDURE ID IS decl body
Rule 2     program -> PROCEDURE ID IS body
Rule 3     subprogram -> FUNCTION ID decl_param IS decl body
Rule 4     subprogram -> FUNCTION ID decl_param IS body
Rule 5     body -> BEGIN cmd_loop END ID SEMICOLON
Rule 6     decl -> var SEMICOLON decl_loop
Rule 7     decl -> subprogram decl_loop
Rule 8     decl_loop -> subprogram decl_loop
Rule 9     decl_loop -> subprogram
Rule 10    decl_loop -> var SEMICOLON decl_loop
Rule 11    decl_loop -> var SEMICOLON
Rule 12    var -> ID COMMA TYPE ASSIGN value
Rule 13    var -> ID COLON TYPE
Rule 14    var -> var_loop ID COLON TYPE
Rule 15    var -> array
Rule 16    var_loop -> var_loop ID COMMA
Rule 17    var_loop -> ID COMMA
Rule 18    decl_param -> LPAREN param RPAREN
Rule 19    decl_param -> LPAREN param RPAREN RETURN TYPE
Rule 20    param -> ID COLON TYPE SEMICOLON param
Rule 21    param -> ID COLON TYPE SEMICOLON
Rule 22    function_call -> ID LPAREN param_pass RPAREN SEMICOLON
Rule 23    function_call_exp -> ID LPAREN param_pass RPAREN
Rule 24    param_pass -> expression COMMA param_pass
Rule 25    param_pass -> expression
Rule 26    value -> NUMBER_INT
Rule 27    value -> NUMBER_FLOAT
Rule 28    value -> NUMBER_EXPONENT
Rule 29    value -> BOOLEAN
Rule 30    value -> STRING
Rule 31    value -> CHAR
Rule 32    cmd -> if_statement
Rule 33    cmd -> repeat_statement
Rule 34    cmd -> puts
Rule 35    cmd -> return
Rule 36    cmd -> assign
Rule 37    cmd -> function_call
Rule 38    cmd_loop -> cmd_loop cmd
Rule 39    cmd_loop -> cmd
Rule 40    puts -> PUTS LPAREN STRING RPAREN SEMICOLON
Rule 41    if_statement -> IF expression THEN cmd_loop if_statement_loop
Rule 42    if_statement_loop -> ELSIF expression cmd_loop if_statement_loop
Rule 43    if_statement_loop -> ELSE expression cmd_loop END IF SEMICOLON
Rule 44    if_statement_loop -> END IF SEMICOLON
Rule 45    repeat_statement -> loop_statement
Rule 46    repeat_statement -> for_statement
Rule 47    repeat_statement -> while_statement
Rule 48    loop_statement -> LOOP cmd_loop END LOOP
Rule 49    while_statement -> WHILE expression NUMBER_INT LOOP cmd_loop END LOOP SEMICOLON
Rule 50    for_statement -> FOR ID IN range LOOP cmd_loop END LOOP SEMICOLON
Rule 51    range -> ID DOTDOT ID
Rule 52    assign -> ID ASSIGN op_arithmetic SEMICOLON
Rule 53    expression -> expression AND or_exp
Rule 54    expression -> or_exp
Rule 55    or_exp -> or_exp OR comp_exp
Rule 56    or_exp -> comp_exp
Rule 57    comp_exp -> comp_exp comp_op op_arithmetic
Rule 58    comp_exp -> op_arithmetic
Rule 59    comp_op -> GREATERTHAN
Rule 60    comp_op -> GREATERTHANEQUAL
Rule 61    comp_op -> LESSTHAN
Rule 62    comp_op -> LESSTHANEQUAL
Rule 63    comp_op -> NOTEQUAL
Rule 64    comp_op -> EQUAL
Rule 65    op_arithmetic -> op_arithmetic PLUS factor
Rule 66    op_arithmetic -> op_arithmetic MINUS factor
Rule 67    op_arithmetic -> factor
Rule 68    factor -> factor TIMES power
Rule 69    factor -> factor DIVIDE power
Rule 70    factor -> power
Rule 71    power -> power POWER term
Rule 72    power -> term
Rule 73    term -> ID
Rule 74    term -> function_call_exp
Rule 75    term -> LPAREN expression RPAREN
Rule 76    array -> TYPE ID IS ARRAY LPAREN range RPAREN OF TYPE SEMICOLON
Rule 77    return -> RETURN expression SEMICOLON

Terminals, with rules where they appear

AND                  : 53
ARRAY                : 76
ASSIGN               : 12 52
BEGIN                : 5
BOOLEAN              : 29
CHAR                 : 31
COLON                : 13 14 20 21
COMMA                : 12 16 17 24
DIVIDE               : 69
DOTDOT               : 51
ELSE                 : 43
ELSIF                : 42
END                  : 5 43 44 48 49 50
EQUAL                : 64
FOR                  : 50
FUNCTION             : 3 4
GREATERTHAN          : 59
GREATERTHANEQUAL     : 60
ID                   : 1 2 3 4 5 12 13 14 16 17 20 21 22 23 50 51 51 52 73 76
IF                   : 41 43 44
IN                   : 50
IS                   : 1 2 3 4 76
LESSTHAN             : 61
LESSTHANEQUAL        : 62
LOOP                 : 48 48 49 49 50 50
LPAREN               : 18 19 22 23 40 75 76
MINUS                : 66
NOTEQUAL             : 63
NUMBER_EXPONENT      : 28
NUMBER_FLOAT         : 27
NUMBER_INT           : 26 49
OF                   : 76
OR                   : 55
PLUS                 : 65
POWER                : 71
PROCEDURE            : 1 2
PUTS                 : 40
RETURN               : 19 77
RPAREN               : 18 19 22 23 40 75 76
SEMICOLON            : 5 6 10 11 20 21 22 40 43 44 49 50 52 76 77
STRING               : 30 40
THEN                 : 41
TIMES                : 68
TYPE                 : 12 13 14 19 20 21 76 76
WHILE                : 49
error                : 

Nonterminals, with rules where they appear

array                : 15
assign               : 36
body                 : 1 2 3 4
cmd                  : 38 39
cmd_loop             : 5 38 41 42 43 48 49 50
comp_exp             : 55 56 57
comp_op              : 57
decl                 : 1 3
decl_loop            : 6 7 8 10
decl_param           : 3 4
expression           : 24 25 41 42 43 49 53 75 77
factor               : 65 66 67 68 69
for_statement        : 46
function_call        : 37
function_call_exp    : 74
if_statement         : 32
if_statement_loop    : 41 42
loop_statement       : 45
op_arithmetic        : 52 57 58 65 66
or_exp               : 53 54 55
param                : 18 19 20
param_pass           : 22 23 24
power                : 68 69 70 71
program              : 0
puts                 : 34
range                : 50 76
repeat_statement     : 33
return               : 35
subprogram           : 7 8 9
term                 : 71 72
value                : 12
var                  : 6 10 11
var_loop             : 14 16
while_statement      : 47

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROCEDURE ID IS decl body
    (2) program -> . PROCEDURE ID IS body

    PROCEDURE       shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROCEDURE . ID IS decl body
    (2) program -> PROCEDURE . ID IS body

    ID              shift and go to state 3


state 3

    (1) program -> PROCEDURE ID . IS decl body
    (2) program -> PROCEDURE ID . IS body

    IS              shift and go to state 4


state 4

    (1) program -> PROCEDURE ID IS . decl body
    (2) program -> PROCEDURE ID IS . body
    (6) decl -> . var SEMICOLON decl_loop
    (7) decl -> . subprogram decl_loop
    (5) body -> . BEGIN cmd_loop END ID SEMICOLON
    (12) var -> . ID COMMA TYPE ASSIGN value
    (13) var -> . ID COLON TYPE
    (14) var -> . var_loop ID COLON TYPE
    (15) var -> . array
    (3) subprogram -> . FUNCTION ID decl_param IS decl body
    (4) subprogram -> . FUNCTION ID decl_param IS body
    (16) var_loop -> . var_loop ID COMMA
    (17) var_loop -> . ID COMMA
    (76) array -> . TYPE ID IS ARRAY LPAREN range RPAREN OF TYPE SEMICOLON

    BEGIN           shift and go to state 10
    ID              shift and go to state 5
    FUNCTION        shift and go to state 14
    TYPE            shift and go to state 11

    decl                           shift and go to state 6
    body                           shift and go to state 7
    var                            shift and go to state 8
    subprogram                     shift and go to state 9
    var_loop                       shift and go to state 12
    array                          shift and go to state 13

state 5

    (12) var -> ID . COMMA TYPE ASSIGN value
    (13) var -> ID . COLON TYPE
    (17) var_loop -> ID . COMMA

    COMMA           shift and go to state 15
    COLON           shift and go to state 16


state 6

    (1) program -> PROCEDURE ID IS decl . body
    (5) body -> . BEGIN cmd_loop END ID SEMICOLON

    BEGIN           shift and go to state 10

    body                           shift and go to state 17

state 7

    (2) program -> PROCEDURE ID IS body .

    $end            reduce using rule 2 (program -> PROCEDURE ID IS body .)


state 8

    (6) decl -> var . SEMICOLON decl_loop

    SEMICOLON       shift and go to state 18


state 9

    (7) decl -> subprogram . decl_loop
    (8) decl_loop -> . subprogram decl_loop
    (9) decl_loop -> . subprogram
    (10) decl_loop -> . var SEMICOLON decl_loop
    (11) decl_loop -> . var SEMICOLON
    (3) subprogram -> . FUNCTION ID decl_param IS decl body
    (4) subprogram -> . FUNCTION ID decl_param IS body
    (12) var -> . ID COMMA TYPE ASSIGN value
    (13) var -> . ID COLON TYPE
    (14) var -> . var_loop ID COLON TYPE
    (15) var -> . array
    (16) var_loop -> . var_loop ID COMMA
    (17) var_loop -> . ID COMMA
    (76) array -> . TYPE ID IS ARRAY LPAREN range RPAREN OF TYPE SEMICOLON

    FUNCTION        shift and go to state 14
    ID              shift and go to state 5
    TYPE            shift and go to state 11

    subprogram                     shift and go to state 19
    decl_loop                      shift and go to state 20
    var                            shift and go to state 21
    var_loop                       shift and go to state 12
    array                          shift and go to state 13

state 10

    (5) body -> BEGIN . cmd_loop END ID SEMICOLON
    (38) cmd_loop -> . cmd_loop cmd
    (39) cmd_loop -> . cmd
    (32) cmd -> . if_statement
    (33) cmd -> . repeat_statement
    (34) cmd -> . puts
    (35) cmd -> . return
    (36) cmd -> . assign
    (37) cmd -> . function_call
    (41) if_statement -> . IF expression THEN cmd_loop if_statement_loop
    (45) repeat_statement -> . loop_statement
    (46) repeat_statement -> . for_statement
    (47) repeat_statement -> . while_statement
    (40) puts -> . PUTS LPAREN STRING RPAREN SEMICOLON
    (77) return -> . RETURN expression SEMICOLON
    (52) assign -> . ID ASSIGN op_arithmetic SEMICOLON
    (22) function_call -> . ID LPAREN param_pass RPAREN SEMICOLON
    (48) loop_statement -> . LOOP cmd_loop END LOOP
    (50) for_statement -> . FOR ID IN range LOOP cmd_loop END LOOP SEMICOLON
    (49) while_statement -> . WHILE expression NUMBER_INT LOOP cmd_loop END LOOP SEMICOLON

    IF              shift and go to state 31
    PUTS            shift and go to state 35
    RETURN          shift and go to state 36
    ID              shift and go to state 23
    LOOP            shift and go to state 37
    FOR             shift and go to state 38
    WHILE           shift and go to state 39

    cmd_loop                       shift and go to state 22
    cmd                            shift and go to state 24
    if_statement                   shift and go to state 25
    repeat_statement               shift and go to state 26
    puts                           shift and go to state 27
    return                         shift and go to state 28
    assign                         shift and go to state 29
    function_call                  shift and go to state 30
    loop_statement                 shift and go to state 32
    for_statement                  shift and go to state 33
    while_statement                shift and go to state 34

state 11

    (76) array -> TYPE . ID IS ARRAY LPAREN range RPAREN OF TYPE SEMICOLON

    ID              shift and go to state 40


state 12

    (14) var -> var_loop . ID COLON TYPE
    (16) var_loop -> var_loop . ID COMMA

    ID              shift and go to state 41


state 13

    (15) var -> array .

    SEMICOLON       reduce using rule 15 (var -> array .)


state 14

    (3) subprogram -> FUNCTION . ID decl_param IS decl body
    (4) subprogram -> FUNCTION . ID decl_param IS body

    ID              shift and go to state 42


state 15

    (12) var -> ID COMMA . TYPE ASSIGN value
    (17) var_loop -> ID COMMA .

    TYPE            shift and go to state 43
    ID              reduce using rule 17 (var_loop -> ID COMMA .)


state 16

    (13) var -> ID COLON . TYPE

    TYPE            shift and go to state 44


state 17

    (1) program -> PROCEDURE ID IS decl body .

    $end            reduce using rule 1 (program -> PROCEDURE ID IS decl body .)


state 18

    (6) decl -> var SEMICOLON . decl_loop
    (8) decl_loop -> . subprogram decl_loop
    (9) decl_loop -> . subprogram
    (10) decl_loop -> . var SEMICOLON decl_loop
    (11) decl_loop -> . var SEMICOLON
    (3) subprogram -> . FUNCTION ID decl_param IS decl body
    (4) subprogram -> . FUNCTION ID decl_param IS body
    (12) var -> . ID COMMA TYPE ASSIGN value
    (13) var -> . ID COLON TYPE
    (14) var -> . var_loop ID COLON TYPE
    (15) var -> . array
    (16) var_loop -> . var_loop ID COMMA
    (17) var_loop -> . ID COMMA
    (76) array -> . TYPE ID IS ARRAY LPAREN range RPAREN OF TYPE SEMICOLON

    FUNCTION        shift and go to state 14
    ID              shift and go to state 5
    TYPE            shift and go to state 11

    var                            shift and go to state 21
    decl_loop                      shift and go to state 45
    subprogram                     shift and go to state 19
    var_loop                       shift and go to state 12
    array                          shift and go to state 13

state 19

    (8) decl_loop -> subprogram . decl_loop
    (9) decl_loop -> subprogram .
    (8) decl_loop -> . subprogram decl_loop
    (9) decl_loop -> . subprogram
    (10) decl_loop -> . var SEMICOLON decl_loop
    (11) decl_loop -> . var SEMICOLON
    (3) subprogram -> . FUNCTION ID decl_param IS decl body
    (4) subprogram -> . FUNCTION ID decl_param IS body
    (12) var -> . ID COMMA TYPE ASSIGN value
    (13) var -> . ID COLON TYPE
    (14) var -> . var_loop ID COLON TYPE
    (15) var -> . array
    (16) var_loop -> . var_loop ID COMMA
    (17) var_loop -> . ID COMMA
    (76) array -> . TYPE ID IS ARRAY LPAREN range RPAREN OF TYPE SEMICOLON

    BEGIN           reduce using rule 9 (decl_loop -> subprogram .)
    FUNCTION        shift and go to state 14
    ID              shift and go to state 5
    TYPE            shift and go to state 11

    subprogram                     shift and go to state 19
    decl_loop                      shift and go to state 46
    var                            shift and go to state 21
    var_loop                       shift and go to state 12
    array                          shift and go to state 13

state 20

    (7) decl -> subprogram decl_loop .

    BEGIN           reduce using rule 7 (decl -> subprogram decl_loop .)


state 21

    (10) decl_loop -> var . SEMICOLON decl_loop
    (11) decl_loop -> var . SEMICOLON

    SEMICOLON       shift and go to state 47


state 22

    (5) body -> BEGIN cmd_loop . END ID SEMICOLON
    (38) cmd_loop -> cmd_loop . cmd
    (32) cmd -> . if_statement
    (33) cmd -> . repeat_statement
    (34) cmd -> . puts
    (35) cmd -> . return
    (36) cmd -> . assign
    (37) cmd -> . function_call
    (41) if_statement -> . IF expression THEN cmd_loop if_statement_loop
    (45) repeat_statement -> . loop_statement
    (46) repeat_statement -> . for_statement
    (47) repeat_statement -> . while_statement
    (40) puts -> . PUTS LPAREN STRING RPAREN SEMICOLON
    (77) return -> . RETURN expression SEMICOLON
    (52) assign -> . ID ASSIGN op_arithmetic SEMICOLON
    (22) function_call -> . ID LPAREN param_pass RPAREN SEMICOLON
    (48) loop_statement -> . LOOP cmd_loop END LOOP
    (50) for_statement -> . FOR ID IN range LOOP cmd_loop END LOOP SEMICOLON
    (49) while_statement -> . WHILE expression NUMBER_INT LOOP cmd_loop END LOOP SEMICOLON

    END             shift and go to state 48
    IF              shift and go to state 31
    PUTS            shift and go to state 35
    RETURN          shift and go to state 36
    ID              shift and go to state 23
    LOOP            shift and go to state 37
    FOR             shift and go to state 38
    WHILE           shift and go to state 39

    cmd                            shift and go to state 49
    if_statement                   shift and go to state 25
    repeat_statement               shift and go to state 26
    puts                           shift and go to state 27
    return                         shift and go to state 28
    assign                         shift and go to state 29
    function_call                  shift and go to state 30
    loop_statement                 shift and go to state 32
    for_statement                  shift and go to state 33
    while_statement                shift and go to state 34

state 23

    (52) assign -> ID . ASSIGN op_arithmetic SEMICOLON
    (22) function_call -> ID . LPAREN param_pass RPAREN SEMICOLON

    ASSIGN          shift and go to state 50
    LPAREN          shift and go to state 51


state 24

    (39) cmd_loop -> cmd .

    END             reduce using rule 39 (cmd_loop -> cmd .)
    IF              reduce using rule 39 (cmd_loop -> cmd .)
    PUTS            reduce using rule 39 (cmd_loop -> cmd .)
    RETURN          reduce using rule 39 (cmd_loop -> cmd .)
    ID              reduce using rule 39 (cmd_loop -> cmd .)
    LOOP            reduce using rule 39 (cmd_loop -> cmd .)
    FOR             reduce using rule 39 (cmd_loop -> cmd .)
    WHILE           reduce using rule 39 (cmd_loop -> cmd .)
    ELSIF           reduce using rule 39 (cmd_loop -> cmd .)
    ELSE            reduce using rule 39 (cmd_loop -> cmd .)


state 25

    (32) cmd -> if_statement .

    END             reduce using rule 32 (cmd -> if_statement .)
    IF              reduce using rule 32 (cmd -> if_statement .)
    PUTS            reduce using rule 32 (cmd -> if_statement .)
    RETURN          reduce using rule 32 (cmd -> if_statement .)
    ID              reduce using rule 32 (cmd -> if_statement .)
    LOOP            reduce using rule 32 (cmd -> if_statement .)
    FOR             reduce using rule 32 (cmd -> if_statement .)
    WHILE           reduce using rule 32 (cmd -> if_statement .)
    ELSIF           reduce using rule 32 (cmd -> if_statement .)
    ELSE            reduce using rule 32 (cmd -> if_statement .)


state 26

    (33) cmd -> repeat_statement .

    END             reduce using rule 33 (cmd -> repeat_statement .)
    IF              reduce using rule 33 (cmd -> repeat_statement .)
    PUTS            reduce using rule 33 (cmd -> repeat_statement .)
    RETURN          reduce using rule 33 (cmd -> repeat_statement .)
    ID              reduce using rule 33 (cmd -> repeat_statement .)
    LOOP            reduce using rule 33 (cmd -> repeat_statement .)
    FOR             reduce using rule 33 (cmd -> repeat_statement .)
    WHILE           reduce using rule 33 (cmd -> repeat_statement .)
    ELSIF           reduce using rule 33 (cmd -> repeat_statement .)
    ELSE            reduce using rule 33 (cmd -> repeat_statement .)


state 27

    (34) cmd -> puts .

    END             reduce using rule 34 (cmd -> puts .)
    IF              reduce using rule 34 (cmd -> puts .)
    PUTS            reduce using rule 34 (cmd -> puts .)
    RETURN          reduce using rule 34 (cmd -> puts .)
    ID              reduce using rule 34 (cmd -> puts .)
    LOOP            reduce using rule 34 (cmd -> puts .)
    FOR             reduce using rule 34 (cmd -> puts .)
    WHILE           reduce using rule 34 (cmd -> puts .)
    ELSIF           reduce using rule 34 (cmd -> puts .)
    ELSE            reduce using rule 34 (cmd -> puts .)


state 28

    (35) cmd -> return .

    END             reduce using rule 35 (cmd -> return .)
    IF              reduce using rule 35 (cmd -> return .)
    PUTS            reduce using rule 35 (cmd -> return .)
    RETURN          reduce using rule 35 (cmd -> return .)
    ID              reduce using rule 35 (cmd -> return .)
    LOOP            reduce using rule 35 (cmd -> return .)
    FOR             reduce using rule 35 (cmd -> return .)
    WHILE           reduce using rule 35 (cmd -> return .)
    ELSIF           reduce using rule 35 (cmd -> return .)
    ELSE            reduce using rule 35 (cmd -> return .)


state 29

    (36) cmd -> assign .

    END             reduce using rule 36 (cmd -> assign .)
    IF              reduce using rule 36 (cmd -> assign .)
    PUTS            reduce using rule 36 (cmd -> assign .)
    RETURN          reduce using rule 36 (cmd -> assign .)
    ID              reduce using rule 36 (cmd -> assign .)
    LOOP            reduce using rule 36 (cmd -> assign .)
    FOR             reduce using rule 36 (cmd -> assign .)
    WHILE           reduce using rule 36 (cmd -> assign .)
    ELSIF           reduce using rule 36 (cmd -> assign .)
    ELSE            reduce using rule 36 (cmd -> assign .)


state 30

    (37) cmd -> function_call .

    END             reduce using rule 37 (cmd -> function_call .)
    IF              reduce using rule 37 (cmd -> function_call .)
    PUTS            reduce using rule 37 (cmd -> function_call .)
    RETURN          reduce using rule 37 (cmd -> function_call .)
    ID              reduce using rule 37 (cmd -> function_call .)
    LOOP            reduce using rule 37 (cmd -> function_call .)
    FOR             reduce using rule 37 (cmd -> function_call .)
    WHILE           reduce using rule 37 (cmd -> function_call .)
    ELSIF           reduce using rule 37 (cmd -> function_call .)
    ELSE            reduce using rule 37 (cmd -> function_call .)


state 31

    (41) if_statement -> IF . expression THEN cmd_loop if_statement_loop
    (53) expression -> . expression AND or_exp
    (54) expression -> . or_exp
    (55) or_exp -> . or_exp OR comp_exp
    (56) or_exp -> . comp_exp
    (57) comp_exp -> . comp_exp comp_op op_arithmetic
    (58) comp_exp -> . op_arithmetic
    (65) op_arithmetic -> . op_arithmetic PLUS factor
    (66) op_arithmetic -> . op_arithmetic MINUS factor
    (67) op_arithmetic -> . factor
    (68) factor -> . factor TIMES power
    (69) factor -> . factor DIVIDE power
    (70) factor -> . power
    (71) power -> . power POWER term
    (72) power -> . term
    (73) term -> . ID
    (74) term -> . function_call_exp
    (75) term -> . LPAREN expression RPAREN
    (23) function_call_exp -> . ID LPAREN param_pass RPAREN

    ID              shift and go to state 59
    LPAREN          shift and go to state 61

    expression                     shift and go to state 52
    or_exp                         shift and go to state 53
    comp_exp                       shift and go to state 54
    op_arithmetic                  shift and go to state 55
    factor                         shift and go to state 56
    power                          shift and go to state 57
    term                           shift and go to state 58
    function_call_exp              shift and go to state 60

state 32

    (45) repeat_statement -> loop_statement .

    END             reduce using rule 45 (repeat_statement -> loop_statement .)
    IF              reduce using rule 45 (repeat_statement -> loop_statement .)
    PUTS            reduce using rule 45 (repeat_statement -> loop_statement .)
    RETURN          reduce using rule 45 (repeat_statement -> loop_statement .)
    ID              reduce using rule 45 (repeat_statement -> loop_statement .)
    LOOP            reduce using rule 45 (repeat_statement -> loop_statement .)
    FOR             reduce using rule 45 (repeat_statement -> loop_statement .)
    WHILE           reduce using rule 45 (repeat_statement -> loop_statement .)
    ELSIF           reduce using rule 45 (repeat_statement -> loop_statement .)
    ELSE            reduce using rule 45 (repeat_statement -> loop_statement .)


state 33

    (46) repeat_statement -> for_statement .

    END             reduce using rule 46 (repeat_statement -> for_statement .)
    IF              reduce using rule 46 (repeat_statement -> for_statement .)
    PUTS            reduce using rule 46 (repeat_statement -> for_statement .)
    RETURN          reduce using rule 46 (repeat_statement -> for_statement .)
    ID              reduce using rule 46 (repeat_statement -> for_statement .)
    LOOP            reduce using rule 46 (repeat_statement -> for_statement .)
    FOR             reduce using rule 46 (repeat_statement -> for_statement .)
    WHILE           reduce using rule 46 (repeat_statement -> for_statement .)
    ELSIF           reduce using rule 46 (repeat_statement -> for_statement .)
    ELSE            reduce using rule 46 (repeat_statement -> for_statement .)


state 34

    (47) repeat_statement -> while_statement .

    END             reduce using rule 47 (repeat_statement -> while_statement .)
    IF              reduce using rule 47 (repeat_statement -> while_statement .)
    PUTS            reduce using rule 47 (repeat_statement -> while_statement .)
    RETURN          reduce using rule 47 (repeat_statement -> while_statement .)
    ID              reduce using rule 47 (repeat_statement -> while_statement .)
    LOOP            reduce using rule 47 (repeat_statement -> while_statement .)
    FOR             reduce using rule 47 (repeat_statement -> while_statement .)
    WHILE           reduce using rule 47 (repeat_statement -> while_statement .)
    ELSIF           reduce using rule 47 (repeat_statement -> while_statement .)
    ELSE            reduce using rule 47 (repeat_statement -> while_statement .)


state 35

    (40) puts -> PUTS . LPAREN STRING RPAREN SEMICOLON

    LPAREN          shift and go to state 62


state 36

    (77) return -> RETURN . expression SEMICOLON
    (53) expression -> . expression AND or_exp
    (54) expression -> . or_exp
    (55) or_exp -> . or_exp OR comp_exp
    (56) or_exp -> . comp_exp
    (57) comp_exp -> . comp_exp comp_op op_arithmetic
    (58) comp_exp -> . op_arithmetic
    (65) op_arithmetic -> . op_arithmetic PLUS factor
    (66) op_arithmetic -> . op_arithmetic MINUS factor
    (67) op_arithmetic -> . factor
    (68) factor -> . factor TIMES power
    (69) factor -> . factor DIVIDE power
    (70) factor -> . power
    (71) power -> . power POWER term
    (72) power -> . term
    (73) term -> . ID
    (74) term -> . function_call_exp
    (75) term -> . LPAREN expression RPAREN
    (23) function_call_exp -> . ID LPAREN param_pass RPAREN

    ID              shift and go to state 59
    LPAREN          shift and go to state 61

    expression                     shift and go to state 63
    or_exp                         shift and go to state 53
    comp_exp                       shift and go to state 54
    op_arithmetic                  shift and go to state 55
    factor                         shift and go to state 56
    power                          shift and go to state 57
    term                           shift and go to state 58
    function_call_exp              shift and go to state 60

state 37

    (48) loop_statement -> LOOP . cmd_loop END LOOP
    (38) cmd_loop -> . cmd_loop cmd
    (39) cmd_loop -> . cmd
    (32) cmd -> . if_statement
    (33) cmd -> . repeat_statement
    (34) cmd -> . puts
    (35) cmd -> . return
    (36) cmd -> . assign
    (37) cmd -> . function_call
    (41) if_statement -> . IF expression THEN cmd_loop if_statement_loop
    (45) repeat_statement -> . loop_statement
    (46) repeat_statement -> . for_statement
    (47) repeat_statement -> . while_statement
    (40) puts -> . PUTS LPAREN STRING RPAREN SEMICOLON
    (77) return -> . RETURN expression SEMICOLON
    (52) assign -> . ID ASSIGN op_arithmetic SEMICOLON
    (22) function_call -> . ID LPAREN param_pass RPAREN SEMICOLON
    (48) loop_statement -> . LOOP cmd_loop END LOOP
    (50) for_statement -> . FOR ID IN range LOOP cmd_loop END LOOP SEMICOLON
    (49) while_statement -> . WHILE expression NUMBER_INT LOOP cmd_loop END LOOP SEMICOLON

    IF              shift and go to state 31
    PUTS            shift and go to state 35
    RETURN          shift and go to state 36
    ID              shift and go to state 23
    LOOP            shift and go to state 37
    FOR             shift and go to state 38
    WHILE           shift and go to state 39

    cmd_loop                       shift and go to state 64
    cmd                            shift and go to state 24
    if_statement                   shift and go to state 25
    repeat_statement               shift and go to state 26
    puts                           shift and go to state 27
    return                         shift and go to state 28
    assign                         shift and go to state 29
    function_call                  shift and go to state 30
    loop_statement                 shift and go to state 32
    for_statement                  shift and go to state 33
    while_statement                shift and go to state 34

state 38

    (50) for_statement -> FOR . ID IN range LOOP cmd_loop END LOOP SEMICOLON

    ID              shift and go to state 65


state 39

    (49) while_statement -> WHILE . expression NUMBER_INT LOOP cmd_loop END LOOP SEMICOLON
    (53) expression -> . expression AND or_exp
    (54) expression -> . or_exp
    (55) or_exp -> . or_exp OR comp_exp
    (56) or_exp -> . comp_exp
    (57) comp_exp -> . comp_exp comp_op op_arithmetic
    (58) comp_exp -> . op_arithmetic
    (65) op_arithmetic -> . op_arithmetic PLUS factor
    (66) op_arithmetic -> . op_arithmetic MINUS factor
    (67) op_arithmetic -> . factor
    (68) factor -> . factor TIMES power
    (69) factor -> . factor DIVIDE power
    (70) factor -> . power
    (71) power -> . power POWER term
    (72) power -> . term
    (73) term -> . ID
    (74) term -> . function_call_exp
    (75) term -> . LPAREN expression RPAREN
    (23) function_call_exp -> . ID LPAREN param_pass RPAREN

    ID              shift and go to state 59
    LPAREN          shift and go to state 61

    expression                     shift and go to state 66
    or_exp                         shift and go to state 53
    comp_exp                       shift and go to state 54
    op_arithmetic                  shift and go to state 55
    factor                         shift and go to state 56
    power                          shift and go to state 57
    term                           shift and go to state 58
    function_call_exp              shift and go to state 60

state 40

    (76) array -> TYPE ID . IS ARRAY LPAREN range RPAREN OF TYPE SEMICOLON

    IS              shift and go to state 67


state 41

    (14) var -> var_loop ID . COLON TYPE
    (16) var_loop -> var_loop ID . COMMA

    COLON           shift and go to state 68
    COMMA           shift and go to state 69


state 42

    (3) subprogram -> FUNCTION ID . decl_param IS decl body
    (4) subprogram -> FUNCTION ID . decl_param IS body
    (18) decl_param -> . LPAREN param RPAREN
    (19) decl_param -> . LPAREN param RPAREN RETURN TYPE

    LPAREN          shift and go to state 71

    decl_param                     shift and go to state 70

state 43

    (12) var -> ID COMMA TYPE . ASSIGN value

    ASSIGN          shift and go to state 72


state 44

    (13) var -> ID COLON TYPE .

    SEMICOLON       reduce using rule 13 (var -> ID COLON TYPE .)


state 45

    (6) decl -> var SEMICOLON decl_loop .

    BEGIN           reduce using rule 6 (decl -> var SEMICOLON decl_loop .)


state 46

    (8) decl_loop -> subprogram decl_loop .

    BEGIN           reduce using rule 8 (decl_loop -> subprogram decl_loop .)


state 47

    (10) decl_loop -> var SEMICOLON . decl_loop
    (11) decl_loop -> var SEMICOLON .
    (8) decl_loop -> . subprogram decl_loop
    (9) decl_loop -> . subprogram
    (10) decl_loop -> . var SEMICOLON decl_loop
    (11) decl_loop -> . var SEMICOLON
    (3) subprogram -> . FUNCTION ID decl_param IS decl body
    (4) subprogram -> . FUNCTION ID decl_param IS body
    (12) var -> . ID COMMA TYPE ASSIGN value
    (13) var -> . ID COLON TYPE
    (14) var -> . var_loop ID COLON TYPE
    (15) var -> . array
    (16) var_loop -> . var_loop ID COMMA
    (17) var_loop -> . ID COMMA
    (76) array -> . TYPE ID IS ARRAY LPAREN range RPAREN OF TYPE SEMICOLON

    BEGIN           reduce using rule 11 (decl_loop -> var SEMICOLON .)
    FUNCTION        shift and go to state 14
    ID              shift and go to state 5
    TYPE            shift and go to state 11

    var                            shift and go to state 21
    decl_loop                      shift and go to state 73
    subprogram                     shift and go to state 19
    var_loop                       shift and go to state 12
    array                          shift and go to state 13

state 48

    (5) body -> BEGIN cmd_loop END . ID SEMICOLON

    ID              shift and go to state 74


state 49

    (38) cmd_loop -> cmd_loop cmd .

    END             reduce using rule 38 (cmd_loop -> cmd_loop cmd .)
    IF              reduce using rule 38 (cmd_loop -> cmd_loop cmd .)
    PUTS            reduce using rule 38 (cmd_loop -> cmd_loop cmd .)
    RETURN          reduce using rule 38 (cmd_loop -> cmd_loop cmd .)
    ID              reduce using rule 38 (cmd_loop -> cmd_loop cmd .)
    LOOP            reduce using rule 38 (cmd_loop -> cmd_loop cmd .)
    FOR             reduce using rule 38 (cmd_loop -> cmd_loop cmd .)
    WHILE           reduce using rule 38 (cmd_loop -> cmd_loop cmd .)
    ELSIF           reduce using rule 38 (cmd_loop -> cmd_loop cmd .)
    ELSE            reduce using rule 38 (cmd_loop -> cmd_loop cmd .)


state 50

    (52) assign -> ID ASSIGN . op_arithmetic SEMICOLON
    (65) op_arithmetic -> . op_arithmetic PLUS factor
    (66) op_arithmetic -> . op_arithmetic MINUS factor
    (67) op_arithmetic -> . factor
    (68) factor -> . factor TIMES power
    (69) factor -> . factor DIVIDE power
    (70) factor -> . power
    (71) power -> . power POWER term
    (72) power -> . term
    (73) term -> . ID
    (74) term -> . function_call_exp
    (75) term -> . LPAREN expression RPAREN
    (23) function_call_exp -> . ID LPAREN param_pass RPAREN

    ID              shift and go to state 59
    LPAREN          shift and go to state 61
